infra/k8s/expiration-depl.yaml
#This is the deployment file for expiration service
#what this does is that it tells k8s to create a pod with the expiration service container
#This connects to the NATS server and Redis server
#Nats server is used to listen to events from other services
#Redis server is used to store the expiration data
#We don't need to create a service for expiration since it doesn't
#need to be accessed from other services or outside the cluster

apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    #Finds the pod with the label app: expiration
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: dulina786/expiration
---
#Don't need a service for expiration since it doesn't
#need to be accessed from other services or outside the cluster
#It's because expiration service only listens to NATS events and doesn't have any HTTP endpoints
