infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    #Finds the pod with the label app: client
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      #POD behaviour
      containers:
        - name: client
          image: us.gcr.io/ticketing-dev-460619/client
---
#Create a service for the client-depl
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  #Find the pod with the label app: client
  selector:
    app: client
  type: ClusterIP #What this does is that it creates a service that is only accessible from within the cluster. Communicate with the PODS inside cluster
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
