infra/k8s/orders-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    #Finds the pod with the label app: orders
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: dulina786/orders
---
#Create a service for the orders-depl
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  #Find the pod with the label app: orders
  selector:
    app: orders
  type: ClusterIP #What this does is that it creates a service that is only accessible from within the cluster
  ports:
    - name: orders
      port: 3000
      targetPort: 3000
