infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    #Finds the pod with the label app: payments
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: dulina786/payments
---
#Create a service for the payments-depl
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  #Find the pod with the label app: ticketpaymentss
  selector:
    app: payments
  type: ClusterIP #What this does is that it creates a service that is only accessible from within the cluster
  ports:
    - name: payments
      port: 3000
      targetPort: 3000
